sna: Switch to a per-crtc pixmap if the pitch exceeds scanout limitations

References: https://bugs.freedesktop.org/show_bug.cgi?id=65099
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>